# Mobile-Missile-Launcher

./: README.md  frames_2025-02-16_19.25.21.gv
MpC/PID/: PIDv4.cpp  PIDv6.cpp  a.out  curve_coordinates.csv  generatePath.py  plotPathPID.py  trajectory.csv
MpC/install/: local_setup.sh  setup.sh
MpC/install/car_path_simulation/lib/car_path_simulation/: path_publisher
MpC/install/car_path_simulation/share/car_path_simulation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  (+1 more)
MpC/log/: latest_build
MpC/mycarsim/: CMakeLists.txt  curve_coordinates.csv  package.xml
MpC/mycarsim/launch/: bridge.launch.py  sim.launch.py
MpC/mycarsim/models/: thecarandworld.sdf
MpC/mycarsim/src/: pid_steer_publisher2.cpp
MpC/occupancy/install/: setup.sh  setup.zsh
MpC/occupancy/src/: a.out  path.cpp  pathnode.cpp  plot.py  points.csv
MpC/visualization_package/: CMakeLists.txt
MpC/visualization_package/config/: config.rviz  rviz_config.rviz
MpC/visualization_package/src/: simu.cpp
install/: local_setup.sh  setup.sh
install/occupancy/lib/occupancy/: listener  talker
install/occupancy/share/occupancy/: package.ps1  package.sh
log/: latest_build
src/occupancy/: CMakeLists.txt
src/occupancy/install/: local_setup.sh  setup.bash  setup.ps1
src/occupancy/log/: latest_build
src/occupancy/src/: a.out  occupancyPub.cpp  path.cpp  pathnode.cpp  subscriber.cpp
starship_detector/starship_detector/: main.py
starship_detector/train10/: args.yaml  events.out.tfevents.1741368929.aryan-Victus-by-HP-Gaming-Laptop-15-fa1xxx.7413.0  results.csv
(+31 files in other folders)
